// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing all link types tests external links new tab 1`] = `
<DocumentFragment>
  <a
    data-cy=""
    href="www.usds.gov"
  >
    test link text
  </a>
</DocumentFragment>
`;

exports[`testing all link types tests external links same tab 1`] = `
<DocumentFragment>
  <a
    class="usa-link usa-link--external"
    data-cy=""
    href="www.usds.gov"
    rel="noreferrer"
    target="_blank"
  >
    test link text
  </a>
</DocumentFragment>
`;

exports[`testing all link types tests internal links 1`] = `
<DocumentFragment>
  <a
    href="/en/methodology"
  >
    test link text
  </a>
</DocumentFragment>
`;
